# STM32F429-CLion

./: .gitignore  .mxproject  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  F429_0.ioc  README.md  build.ninja  cmake_install.cmake  compile_commands.json  flash.bat  openocd.cfg
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: adc.c  app_main.c  gpio.c  main.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
